[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Particles/StarFieldBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/UITheme.tres" type="Theme" id=3]
[ext_resource path="res://UI/itch.io.png" type="Texture" id=4]
[ext_resource path="res://UI/facebook.png" type="Texture" id=5]
[ext_resource path="res://UI/github.png" type="Texture" id=6]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameFinished.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_intensity = 0.5
glow_bloom = 0.1
glow_blend_mode = 0

[node name="GameFinished" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 460, 270 )

[node name="Congratulations" type="Label" parent="."]
anchor_right = 1.0
margin_top = 51.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "Congratulations!!"
align = 1
valign = 1

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.5
margin_top = -84.5
margin_right = 460.5
margin_bottom = 84.5
custom_fonts/font = SubResource( 2 )
text = "You have officially Beaten my Game.
You are a skilled gamer.
Thank You for playing My Game.
- Arnav Ghatti"
align = 1
valign = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="StarFieldBackground" type="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="Exit" type="Button" parent="."]
margin_left = 335.5
margin_top = 459.0
margin_right = 585.5
margin_bottom = 494.0
rect_pivot_offset = Vector2( 125, 19 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0392157, 0, 0.12549, 1 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="."]
margin_left = 335.5
margin_top = 403.0
margin_right = 585.5
margin_bottom = 438.0
rect_pivot_offset = Vector2( 125, 19 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.0392157, 0, 0.12549, 1 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itchio" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 165.0
margin_top = 170.0
margin_right = 305.0
margin_bottom = 304.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 70, 67 )
icon = ExtResource( 4 )
flat = true

[node name="facebook" type="Button" parent="."]
margin_left = 705.5
margin_top = 440.0
margin_right = 845.5
margin_bottom = 574.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 70, 67 )
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="github" type="Button" parent="."]
margin_left = 785.5
margin_top = 440.0
margin_right = 925.5
margin_bottom = 574.0
rect_scale = Vector2( 0.35, 0.35 )
rect_pivot_offset = Vector2( 70, 67 )
mouse_default_cursor_shape = 2
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="itchio" to="." method="_on_itchio_pressed"]
[connection signal="pressed" from="facebook" to="." method="_on_facebook_pressed"]
[connection signal="pressed" from="github" to="." method="_on_github_pressed"]
